css/styles.css
/* styles.css */
body {
    font-family: Georgia, 'Times New Roman', Times, serif;
    margin: 0 auto;
}

.contents {
    position: relative;
    max-width: 800px;
    margin: auto;
    padding: 20px;
    height: 100%;
    padding-bottom: 50px;
  }

.profile-picture {
    border: 5px solid #397db9; /* Change the color and size as needed */
    max-width: 238px;
    max-height: 300px;
}

.profile-container {
    text-align: right;
    top: -30px;
    position: absolute;
    right: 0;
}

.header-image {
    position: relative;
}

.header-image img {
    width: 100%;
    max-width: 1000px;
    max-height: 300px;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

h1 {
    color: #397db9;
  }

h1 div {
    /* width: fit-content; */
    display: inline-block;
    background-color: white;
    padding: 10px 20px 10px 20px;
  }

